--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
   ### Application services
   hyperswitch-server:
     image: juspaydotin/hyperswitch-router:standalone
+    pull_policy: always
     command: /local/bin/router -f /local/config/docker_compose.toml
     ports:
       - "8080:8080"
@@ -67,6 +68,7 @@ services:
 
   hyperswitch-producer:
     image: juspaydotin/hyperswitch-producer:standalone
+    pull_policy: always
     command: /local/bin/scheduler -f /local/config/docker_compose.toml
     networks:
       - router_net
@@ -84,6 +86,7 @@ services:
 
   hyperswitch-consumer:
     image: juspaydotin/hyperswitch-consumer:standalone
+    pull_policy: always
     command: /local/bin/scheduler -f /local/config/docker_compose.toml
     networks:
       - router_net
@@ -107,6 +110,7 @@ services:
 
   hyperswitch-drainer:
     image: juspaydotin/hyperswitch-drainer:standalone
+    pull_policy: always
     command: /local/bin/drainer -f /local/config/docker_compose.toml
     deploy:
       replicas: ${DRAINER_INSTANCE_COUNT:-1}
@@ -148,6 +152,7 @@ services:
   ### Control Center
   hyperswitch-control-center:
     image: juspaydotin/hyperswitch-control-center:latest
+    pull_policy: always
     ports:
       - "9000:9000"
     environment:
