--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -381,6 +381,8 @@ services:
       - ./docker/fluentd/conf:/fluentd/etc
     networks:
       - router_net
+    profiles:
+      - olap
 
   opensearch:
     image: public.ecr.aws/opensearchproject/opensearch:1.3.14
@@ -394,6 +396,8 @@ services:
       - "9200:9200"
     networks:
       - router_net
+    profiles:
+      - olap
 
   opensearch-dashboards:
     image: opensearchproject/opensearch-dashboards:1.3.14
@@ -405,3 +409,5 @@ services:
       OPENSEARCH_HOSTS: '["https://opensearch:9200"]'
     networks:
       - router_net
+    profiles:
+      - olap
