--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -129,6 +129,7 @@ host_rs = ""                # Rust Locker host
 mock_locker = true          # Emulate a locker locally using Postgres
 locker_signing_key_id = "1" # Key_id to sign basilisk hs locker
 locker_enabled = true       # Boolean to enable or disable saving cards in locker
+ttl_for_storage = 1000      # Time to live for storage entries in locker
 
 [delayed_session_response]
 connectors_with_delayed_session_response = "trustpay,payme" # List of connectors which has delayed session response
