--- a/config/docker_compose.toml
+++ b/config/docker_compose.toml
@@ -60,6 +60,7 @@ host_rs = ""
 mock_locker = true
 basilisk_host = ""
 locker_enabled = true
+ttl_for_storage = 1000
 
 [jwekey]
 vault_encryption_key = ""
