--- a/.github/workflows/pr-convention-checks.yml
+++ b/.github/workflows/pr-convention-checks.yml
@@ -7,13 +7,13 @@ on:
   # pull request whenever this trigger is used.
   # Since we do not have a checkout step in this workflow, this is an
   # acceptable use of this trigger.
-  pull_request_target:
-    types:
-      - opened
-      - edited
-      - reopened
-      - ready_for_review
-      - synchronize
+  pull_request:
+    # types:
+    #   - opened
+    #   - edited
+    #   - reopened
+    #   - ready_for_review
+    #   - synchronize
 
   merge_group:
     types:
