--- a/.github/workflows/pr-convention-checks.yml
+++ b/.github/workflows/pr-convention-checks.yml
@@ -144,11 +144,11 @@ jobs:
 
           files_changed="$(gh api --header "Accept: application/vnd.github+json" --header "X-GitHub-Api-Version: 2022-11-28" --paginate https://api.github.com/repos/juspay/hyperswitch/pulls/${{ github.event.pull_request.number }}/files --jq '.[] | .filename')"
 
-          if echo $files_changed | grep --quiet --extended-regexp '^(migrations/*|crates/diesel_models/src/schema.rs)' ; then
+          if echo $files_changed | grep --quiet --extended-regexp '(migrations/* | crates/diesel_models/src/schema.rs)' ; then
             migration_and_schema_changes='true'
           fi
           
-          if echo $files_changed | grep --quiet --extended-regexp '^(openapi/src/openapi.rs)'; then
+          if echo $files_changed | grep --quiet --extended-regexp '(openapi/src/openapi.rs)'; then
             openapi_changes='true'
           fi
 
