--- a/docker/vector/vector.yaml
+++ b/docker/vector/vector.yaml
@@ -35,7 +35,7 @@ transforms:
       - parse_kafka_payments
     source: >-
       .sessionizer = {
-        "table": "payments",
+        "table": "${CASSANDRA_TABLE:-payments}",
         "id": string!(.log.merchant_id) + "_" + string!(.log.payment_id),
         "db_log_type": "intent"
       };
@@ -66,14 +66,14 @@ transforms:
       shutdown: shutdown
     source: |-
       local socket = require 'socket'
+      local cassandra = require "cassandra"
 
       function sleep(sec)
         socket.select(nil, nil, sec)
       end
 
-      function init(emit)
-        local cassandra = require "cassandra"
-        
+
+      function create_cassandra_connection()
         client = assert(cassandra.new {
           host = os.getenv("CASSANDRA_HOST") or "cassandra0",
           port = os.getenv("CASSANDRA_PORT") or 9042,
@@ -84,7 +84,12 @@ transforms:
         })
 
         client:settimeout(1000)
+        client:setkeepalive(0)
         assert(client:connect())
+      end
+
+      function init(emit)
+        create_cassandra_connection()  
       end
 
       function db_get(table, id, version)
@@ -99,8 +104,12 @@ transforms:
         local is_success, data = pcall(db_get, table, id, version)
         while not is_success do
           sleep(5)
-          client:connect()
-          is_success, data = pcall(db_get, table, id, version)
+          if not client then
+            create_cassandra_connection()
+          else
+            client:connect()
+            is_success, data = pcall(db_get, table, id, version)
+          end
         end
 
         return data
@@ -179,9 +188,7 @@ transforms:
         socket.select(nil, nil, sec)
       end
 
-
-      function init(emit)
-        
+      function create_cassandra_connection()
         client = assert(cassandra.new {
           host = os.getenv("CASSANDRA_HOST") or "cassandra0",
           port = os.getenv("CASSANDRA_PORT") or 9042,
@@ -192,8 +199,12 @@ transforms:
         })
 
         client:settimeout(1000)
+        client:setkeepalive(0)
         assert(client:connect())
+      end
 
+      function init(emit)
+        create_cassandra_connection()
       end
 
       function db_set(table, state, id, version)
@@ -211,8 +222,12 @@ transforms:
 
         while not is_success do
           sleep(5)
-          client:connect()
-          is_success, res = pcall(db_set, table, state, id, version)
+          if not client then
+            create_cassandra_connection()
+          else
+            client:connect()
+            is_success, res = pcall(db_set, table, state, id, version)
+          end
         end
 
         return res
@@ -282,10 +297,10 @@ transforms:
           }
         }
 
-        .refund_total_count = int(.refund_total_count) ?? 0 + refund_total_count;
-        .refund_total_amount = to_float(.refund_total_amount) ?? 0 + refund_total_amount;
-        .refund_success_count = int(.refund_success_count) ?? 0 + refund_success_count;
-        .refund_success_amount = to_float(.refund_success_amount) ?? 0 + refund_success_amount;
+        .refund_total_count = refund_total_count + to_int(.refund_total_count) ?? 0;
+        .refund_total_amount = refund_total_amount + to_float(.refund_total_amount) ?? 0;
+        .refund_success_count = refund_success_count + to_int(.refund_success_count) ?? 0;
+        .refund_success_amount = refund_success_amount + to_float(.refund_success_amount) ?? 0;
 
         attempt_log.refund_total_count = refund_total_count;
         attempt_log.refund_total_amount = refund_total_amount;
@@ -309,10 +324,10 @@ transforms:
           }
         }
 
-        .dispute_total_count = int(.dispute_total_count) ?? 0 + dispute_total_count;
-        .dispute_total_amount = to_float(.dispute_total_amount) ?? 0 + dispute_total_amount;
-        .dispute_success_count = int(.dispute_success_count) ?? 0 + dispute_success_count;
-        .dispute_success_amount = to_float(.dispute_success_amount) ?? 0 + dispute_success_amount;
+        .dispute_total_count = dispute_total_count + to_int(.dispute_total_count) ?? 0;
+        .dispute_total_amount = dispute_total_amount + to_float(.dispute_total_amount) ?? 0;
+        .dispute_success_count = dispute_success_count + to_int(.dispute_success_count) ?? 0;
+        .dispute_success_amount = dispute_success_amount + to_float(.dispute_success_amount) ?? 0;
 
         attempt_log.dispute_total_count = dispute_total_count;
         attempt_log.dispute_total_amount = dispute_total_amount;
@@ -322,10 +337,11 @@ transforms:
         .attempts = set!(.attempts, [attempt_id], attempt_log)
       }
 
-      .attempt_total_count = int(.attempt_total_count) ?? 0 + attempt_total_count;
-      .attempt_total_amount = to_float(.attempt_total_amount) ?? 0 + attempt_total_amount;
-      .attempt_success_count = int(.attempt_success_count) ?? 0 + attempt_success_count;
-      .attempt_success_amount = to_float(.attempt_success_amount) ?? 0 + attempt_success_amount;
+      log(attempt_total_amount + to_float(.attempt_total_amount) ?? 0);
+      .attempt_total_count = attempt_total_count + to_int(.attempt_total_count) ?? 0;
+      .attempt_total_amount = attempt_total_amount + to_float(.attempt_total_amount) ?? 0;
+      .attempt_success_count = attempt_success_count + to_int(.attempt_success_count) ?? 0;
+      .attempt_success_amount = attempt_success_amount + to_float(.attempt_success_amount) ?? 0;
 
   consolidate_events_intents:
     type: remap
