feat: create config for totp issuer and force totp

--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -353,6 +353,7 @@ sts_role_session_name = "" # An identifier for the assumed role session, used to
 [user]
 password_validity_in_days = 90             # Number of days after which password should be updated
 two_factor_auth_expiry_in_secs = 300       # Number of seconds after which 2FA should be done again if doing update/change from inside
+totp_issuer_name = "Hyperswitch"           # Name of the issuer for TOTP
 
 #tokenization configuration which describe token lifetime and payment method for specific connector
 [tokenization]
