--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
-version: "3.8"
-
 volumes:
   pg_data:
   redisinsight_store:
+  ckh_data:
 
 networks:
   router_net:
@@ -122,6 +121,42 @@ services:
     labels:
       logs: "promtail"
 
+### Web Client
+  hyperswitch-web:
+    ports:
+      - "9050:9050"
+      - "9060:9060"
+      - "5252:5252"
+    build:
+      context: ./docker
+      dockerfile: web.Dockerfile
+    environment:
+      - HYPERSWITCH_PUBLISHABLE_KEY=${HYPERSWITCH_PUBLISHABLE_KEY:-PUBLISHABLE_KEY}
+      - HYPERSWITCH_SECRET_KEY=${HYPERSWITCH_SECRET_KEY:-SECRET_KEY}
+      - HYPERSWITCH_SERVER_URL=${HYPERSWITCH_SERVER_URL:-http://hyperswitch-server:8080}
+      - HYPERSWITCH_CLIENT_URL=${HYPERSWITCH_CLIENT_URL:-http://localhost:9050}
+      - SELF_SERVER_URL=${SELF_SERVER_URL:-http://localhost:5252}
+      - SDK_ENV=${SDK_ENV:-local}
+      - ENV_SDK_URL=${ENV_SDK_URL:-http://localhost:9050}
+      - ENV_BACKEND_URL=${ENV_BACKEND_URL:-http://localhost:8080}
+      - ENV_LOGGING_URL=${ENV_LOGGING_URL:-http://localhost:3100}
+    labels:  
+      logs: "promtail"  
+
+  ### Control Center
+  hyperswitch-control-center:
+    image: juspaydotin/hyperswitch-control-center:latest
+    ports:
+      - "9000:9000"
+    environment:
+      - configPath=/tmp/dashboard-config.toml
+    volumes:
+      - ./config/dashboard.toml:/tmp/dashboard-config.toml
+    depends_on:
+      - hyperswitch-web
+    labels:  
+      logs: "promtail" 
+
   ### Clustered Redis setup
   redis-cluster:
     image: redis:7
@@ -146,38 +181,23 @@ services:
       - redis-cluster
     networks:
       - router_net
-    command: "bash -c 'export COUNT=${REDIS_CLUSTER_COUNT:-3}
-
-      \ if [ $$COUNT -lt 3 ]
-
-      \ then
-
-      \ echo \"Minimum 3 nodes are needed for redis cluster\"
-
-      \ exit 1
-
-      \ fi
-
-      \ HOSTS=\"\"
-
-      \ for ((c=1; c<=$$COUNT;c++))
-
-      \ do
-
-      \ NODE=$COMPOSE_PROJECT_NAME-redis-cluster-$$c:6379
-
-      \ echo $$NODE
-
-      \ HOSTS=\"$$HOSTS $$NODE\"
-
-      \ done
-
-      \ echo Creating a cluster with $$HOSTS
-
-      \ redis-cli --cluster create $$HOSTS --cluster-yes
-
-      \ '"
-
+    command: |-
+      bash -c 'export COUNT=${REDIS_CLUSTER_COUNT:-3}
+      if [ $$COUNT -lt 3 ]
+      then
+      echo \"Minimum 3 nodes are needed for redis cluster\"
+      exit 1
+      fi
+      HOSTS=\"\"
+      for ((c=1; c<=$$COUNT;c++))
+      do
+      NODE=$COMPOSE_PROJECT_NAME-redis-cluster-$$c:6379
+      echo $$NODE
+      HOSTS=\"$$HOSTS $$NODE\"
+      done
+      echo Creating a cluster with $$HOSTS
+      redis-cli --cluster create $$HOSTS --cluster-yes
+      '
   ### Monitoring
   grafana:
     image: grafana/grafana:latest
@@ -265,7 +285,7 @@ services:
     networks:
       - router_net
     profiles:
-      - full_kv
+      - monitoring
     ports:
       - "8001:8001"
     volumes:
@@ -321,15 +341,50 @@ services:
       KAFKA_CLUSTERS_0_JMXPORT: 9997
 
   clickhouse-server:
-    image: clickhouse/clickhouse-server:23.5
+    image: clickhouse/clickhouse-server:24.3
     networks:
       - router_net
     ports:
       - "9000"
       - "8123:8123"
+    volumes:
+      - ./crates/analytics/docs/clickhouse/scripts:/docker-entrypoint-initdb.d
     profiles:
       - analytics
     ulimits:
       nofile:
         soft: 262144
         hard: 262144
+
+  fluentd:
+    build: ./docker/fluentd
+    volumes:
+      - ./docker/fluentd/conf:/fluentd/etc
+    networks:
+      - router_net
+    profiles:
+      - olap
+
+  opensearch:
+    image: public.ecr.aws/opensearchproject/opensearch:1.3.14
+    container_name: opensearch
+    hostname: opensearch
+    environment:
+      - "discovery.type=single-node"
+    profiles:
+      - olap
+    ports:
+      - "9200:9200"
+    networks:
+      - router_net
+
+  opensearch-dashboards:
+    image: opensearchproject/opensearch-dashboards:1.3.14
+    ports:
+      - 5601:5601
+    profiles:
+      - olap
+    environment:
+      OPENSEARCH_HOSTS: '["https://opensearch:9200"]'
+    networks:
+      - router_net
