--- a/crates/diesel_models/Cargo.toml
+++ b/crates/diesel_models/Cargo.toml
@@ -13,6 +13,7 @@ kv_store = []
 
 [dependencies]
 async-bb8-diesel = { git = "https://github.com/jarnura/async-bb8-diesel", rev = "53b4ab901aab7635c8215fd1c2d542c8db443094" }
+async-trait = "0.1.79"
 diesel = { version = "2.1.5", features = ["postgres", "serde_json", "time", "64-column-tables"] }
 error-stack = "0.4.1"
 frunk = "0.4.2"
