--- a/crates/connector_configs/toml/development.toml
+++ b/crates/connector_configs/toml/development.toml
@@ -774,6 +774,7 @@ label="apple"
 [checkout.metadata]
 acquirer_bin = "Acquirer Bin"
 acquirer_merchant_id = "Acquirer Merchant ID"
+acquirer_country_code = "Acquirer Country Code"
 
 [coinbase]
 [[coinbase.crypto]]
@@ -856,6 +857,11 @@ label="apple"
 merchant_name="Google Pay Merchant Name"
 gateway_merchant_id="Google Pay Merchant Key"
 merchant_id="Google Pay Merchant ID"
+
+[cybersource.metadata]
+acquirer_bin = "Acquirer Bin"
+acquirer_merchant_id = "Acquirer Merchant ID"
+acquirer_country_code = "Acquirer Country Code"
 
 [cybersource_payout]
 [[cybersource_payout.credit]]
@@ -1370,6 +1376,7 @@ merchant_secret="Source verification key"
 [nmi.metadata]
 acquirer_bin = "Acquirer Bin"
 acquirer_merchant_id = "Acquirer Merchant ID"
+acquirer_country_code = "Acquirer Country Code"
 
 [nmi.metadata.google_pay]
 merchant_name="Google Pay Merchant Name"
