--- a/crates/redis_interface/Cargo.toml
+++ b/crates/redis_interface/Cargo.toml
@@ -7,6 +7,10 @@ rust-version.workspace = true
 readme = "README.md"
 license.workspace = true
 
+[features]
+
+no-ttl = []
+
 [dependencies]
 error-stack = "0.4.1"
 fred = { version = "7.1.2", features = ["metrics", "partial-tracing", "subscriber-client", "check-unresponsive"] }
