--- a/config/deployments/env_specific.toml
+++ b/config/deployments/env_specific.toml
@@ -257,4 +257,4 @@ region = "kms_region" # The AWS region used by the KMS SDK for decrypting data.
 enabled = false
 
 [multitenancy.tenants]
-public = { name = "hyperswitch", base_url = "http://localhost:8080", schema = "public", redis_key_prefix = ""}
+public = { name = "hyperswitch", base_url = "http://localhost:8080", schema = "public", redis_key_prefix = "", clickhouse_database = "default"}
