--- a/config/development.toml
+++ b/config/development.toml
@@ -633,4 +633,4 @@ sdk_eligible_payment_methods = "card"
 enabled = false
 
 [multitenancy.tenants]
-public = { name = "hyperswitch", base_url = "http://localhost:8080", schema = "public", redis_key_prefix = ""}
+public = { name = "hyperswitch", base_url = "http://localhost:8080", schema = "public", redis_key_prefix = "", clickhouse_database = "default"}
