--- a/crates/router_env/Cargo.toml
+++ b/crates/router_env/Cargo.toml
@@ -38,9 +38,10 @@ cargo_metadata = "0.18.1"
 vergen = { version = "8.3.1", features = ["cargo", "git", "git2", "rustc"], optional = true }
 
 [features]
-default = ["actix_web", "payouts"]
+default = ["actix_web", "payouts", "set_workspace_members_on_build"]
 actix_web = ["tracing-actix-web"]
 log_custom_entries_to_extra = []
 log_extra_implicit_fields = []
 log_active_span_json = []
 payouts = []
+set_workspace_members_on_build = []
