--- a/.github/workflows/pr-convention-checks.yml
+++ b/.github/workflows/pr-convention-checks.yml
@@ -145,16 +145,17 @@ jobs:
           files_changed="$(gh api --header "Accept: application/vnd.github+json" --header "X-GitHub-Api-Version: 2022-11-28" --paginate https://api.github.com/repos/juspay/hyperswitch/pulls/${{ github.event.pull_request.number }}/files --jq '.[] | .filename')"
 
           if echo $files_changed | grep --quiet --extended-regexp '(migrations/*|crates/diesel_models/src/schema.rs)' ; then
-            migration_and_schema_changes='true' >> $GITHUB_ENV
-            echo $migration_and_schema_changes
+            migration_and_schema_changes='true'
+            echo "pr contains migration changes"
           fi
           
           if echo $files_changed | grep --quiet --extended-regexp '(openapi/src/openapi.rs)'; then
-            openapi_changes='true' >> $GITHUB_ENV
-            echo $openapi_changes
+            openapi_changes='true'
+            echo "pr contains openapi changes"
           fi
-          echo migration_and_schema_changes=$migration_and_schema_changes >> $GITHUB_ENV
-          echo test='hello' >> $GITHUB_ENV 
+
+          echo migration_and_schema_changes=${migration_and_schema_changes} >> $GITHUB_ENV
+          echo openapi_changes=${openapi_changes} >> $GITHUB_ENV
 
       - name: Get changed fiels
         shell: bash
