--- a/crates/drainer/Cargo.toml
+++ b/crates/drainer/Cargo.toml
@@ -36,7 +36,7 @@ external_services = { version = "0.1.0", path = "../external_services" }
 hyperswitch_interfaces = { version = "0.1.0", path = "../hyperswitch_interfaces" }
 masking = { version = "0.1.0", path = "../masking" }
 redis_interface = { version = "0.1.0", path = "../redis_interface" }
-router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra"] }
+router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra", "set_workspace_members_on_build"] }
 
 [build-dependencies]
 router_env = { version = "0.1.0", path = "../router_env", default-features = false }
