--- a/crates/scheduler/Cargo.toml
+++ b/crates/scheduler/Cargo.toml
@@ -33,7 +33,7 @@ diesel_models = { version = "0.1.0", path = "../diesel_models", features = ["kv_
 external_services = { version = "0.1.0", path = "../external_services" }
 masking = { version = "0.1.0", path = "../masking" }
 redis_interface = { version = "0.1.0", path = "../redis_interface" }
-router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra"] }
+router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra", "set_workspace_members_on_build"] }
 storage_impl = { version = "0.1.0", path = "../storage_impl", default-features = false }
 hyperswitch_domain_models = {version = "0.1.0", path = "../hyperswitch_domain_models",  default-features = false }
 
